<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bakgrunnur3"
    tools:context="com.example.manisigurdsson.hangman.Menu">
    <Button
        android:id="@+id/singlePlayerID"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="clickedSinglePlayer"
        android:text="@string/single_player"
        style="@style/buttons"/>
    <Button
        android:id="@+id/twoPlayerID"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickedTwoPlayer"
        android:text="@string/two_player"
        style="@style/buttons"/>
    <Button
        android:id="@+id/optionsID"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickedOptions"
        android:text="@string/options"
        style="@style/buttons"/>
    <Button
        android:id="@+id/highscoreID"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickedHighscore"
        android:text="@string/highscore"
        style="@style/buttons"/>
    <Button
        android:id="@+id/statsID"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickedStats"
        android:text="@string/stats"
        style="@style/buttons"/>

    <Button
        android:id="@+id/stats__ID"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickedStats"
        android:text="@string/stats"
        style="@style/buttons"/>
</LinearLayout>
