<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bakgrunnur3"
    tools:context="com.example.manisigurdsson.hangman.Options">


    <TextView
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/music" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/onbtnid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onclck"
                android:text="@string/on"
                style="@style/buttons"/>
            <Button
                android:id="@+id/offbtnid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="offClick"
                android:text="@string/off"
                style="@style/buttons"/>
        </LinearLayout>
    <Button
        android:id="@+id/submitid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="SubmitClick"
        style="@style/buttons"/>
</LinearLayout>
