<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bakgrunnur3"
    tools:context="com.example.manisigurdsson.hangman.DifficultySettings">

    <Button
        android:id="@+id/easyid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:onClick="easyClick"/>

    <Button
        android:id="@+id/mediumid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:layout_marginTop="10dp"
        android:onClick="mediumClick"/>

    <Button
        android:id="@+id/hardid"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        android:layout_marginTop="10dp"
        android:onClick="hardClick"/>
</LinearLayout>
